# asyncroscopy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
asyncroscopy/: utils.py
asyncroscopy/clients/: tem_client.py
asyncroscopy/cloned_repos/pystemsim/: MoS2_ortho.cif  data_generator.py
asyncroscopy/servers/: AS_server.py  AS_server_AtomBlastTwin.py  AS_server_SimAtomRes.py  Ceos_server_twin.py  central_server.py
asyncroscopy/servers/protocols/: central_protocol.py
asyncroscopy/smart_proxy/: CEOSacquisition.py  CorrectorClient.py  base_proxy.py  smart_proxy.py  smart_proxy2.py  smart_proxy3.py  twisted_STEM.ipynb
notebooks/: Aberrations.ipynb  Aberrations_real.ipynb  AtomBlast.ipynb  ImSpec.ipynb  Segmentation2.ipynb  Segmentation_GMD.ipynb  notebook.ipynb
notebooks/aberrations-BO/: notebook-1-mogp-c1-a1x-a1y.ipynb
notebooks/output/: coords.csv
scripts/: run_segmentation.py  save_coords_and_visualize.py
